Share config and preferences with Core module